--- a/Views/Admin/_EditStudentPartial.cshtml
+++ b/Views/Admin/_EditStudentPartial.cshtml
@@ -1,26 +1,26 @@
-﻿@model IDGenWebsite.Models.StudentModel
+﻿@model IDGenWebsite.Models.Users
 <!--Modal-->
 @Html.AntiForgeryToken()
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <div class="form-group">
-    <label asp-for="ID" class="control-label"></label>
-    <input asp-for="ID" class="form-control" readonly />
-    <span asp-validation-for="ID" class="text-danger"></span>
+    <label asp-for="SourcedId" class="control-label"></label>
+    <input asp-for="SourcedId" class="form-control" readonly />
+    <span asp-validation-for="SourcedId" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="StudentID" class="control-label"></label>
-    <input asp-for="StudentID" class="form-control" readonly/>
-    <span asp-validation-for="StudentID" class="text-danger"></span>
+    <label asp-for="Identifier" class="control-label"></label>
+    <input asp-for="Identifier" class="form-control" readonly />
+    <span asp-validation-for="Identifier" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="FirstName" class="control-label"></label>
-    <input asp-for="FirstName" class="form-control" />
-    <span asp-validation-for="FirstName" class="text-danger"></span>
+    <label asp-for="GivenName" class="control-label"></label>
+    <input asp-for="GivenName" class="form-control" />
+    <span asp-validation-for="GivenName" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="LastName" class="control-label"></label>
-    <input asp-for="LastName" class="form-control" />
-    <span asp-validation-for="LastName" class="text-danger"></span>
+    <label asp-for="FamilyName" class="control-label"></label>
+    <input asp-for="FamilyName" class="form-control" />
+    <span asp-validation-for="FamilyName" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="Email" class="control-label"></label>
@@ -28,16 +28,11 @@
     <span asp-validation-for="Email" class="text-danger"></span>
 </div>
 <div class="form-group">
-    <label asp-for="DisplayName" class="control-label"></label>
-    <input asp-for="DisplayName" class="form-control" />
-    <span asp-validation-for="DisplayName" class="text-danger"></span>
-</div>
-<div class="form-group">
     <label asp-for="QrCode" class="control-label"></label>
     <input asp-for="QrCode" class="form-control" />
     <span asp-validation-for="QrCode" class="text-danger"></span>
 </div>
-<div class="form-group">
+<!-- class="form-group">
     <label asp-for="GradeLevel" class="control-label"></label>
     <input asp-for="GradeLevel" class="form-control" />
     <span asp-validation-for="GradeLevel" class="text-danger"></span>
@@ -54,6 +49,6 @@
 </div>
 <div class="form-group">
     <label asp-for="HasBeenManuallyEdited" class="control-label"></label>
-    <input asp-for="HasBeenManuallyEdited" class="form-control" readonly/>
+    <input asp-for="HasBeenManuallyEdited" class="form-control" readonly />
     <span asp-validation-for="HasBeenManuallyEdited" class="text-danger"></span>
-</div>
+</div>-->
