API Integration Added

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -2,52 +2,60 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 <link rel="stylesheet" href="~/css/AdminDashboardStyleSheet.css" />
+<!--First Row-->
 <div class="row d-flex justify-content-center">
     <div class="card-deck">
-        <div class="card">
+        <!--Orgs Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Organizations</h4>
-                <p class="card-text">Chromebook #1</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Organizations: </p>
+                <a href="#" class="btn btn-primary">See Organizations</a>
             </div>
         </div>
-        <div class="card">
+        <!--Academic Sessions Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Academic Sessions</h4>
-                <p class="card-text">Chromebook #2</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Academic Sessions: </p>
+                <a href="#" class="btn btn-primary">See Academic Sessions </a>
             </div>
         </div>
-        <div class="card">
+        <!--Users Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Users</h4>
-                <p class="card-text">Chromebook #3</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Users: </p>
+                <a href="#" class="btn btn-primary">See Users</a>
             </div>
         </div>
     </div>
 </div>
+<!--Second Row-->
 <div class="row d-flex justify-content-center">
     <div class="card-deck">
-        <div class="card">
+        <!--Courses Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Courses</h4>
-                <p class="card-text">Chromebook #1</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Courses: </p>
+                <a href="#" class="btn btn-primary">See Courses</a>
             </div>
         </div>
-        <div class="card">
+        <!--Classes Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Classes</h4>
-                <p class="card-text">Chromebook #2</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Classes: </p>
+                <a href="#" class="btn btn-primary">See Classes</a>
             </div>
         </div>
-        <div class="card">
+        <!--Enrollments Card-->
+        <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Enrollments</h4>
-                <p class="card-text">Chromebook #3</p>
-                <a href="#" class="btn btn-primary">See Profile</a>
+                <p class="card-text">Enrollments: </p>
+                <a href="#" class="btn btn-primary">See Enrollments</a>
             </div>
         </div>
     </div>
